force-app/main/Messaging/objects/Message__c/Message__c.object-meta.xml
<CustomObject>
    <label>Message</label>
    <pluralLabel>Messages</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Message Number</label>
        <displayFormat>MSG-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Custom object to store messages for the messaging app</description>
</CustomObject> 