force-app/main/Messaging/objects/Message__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>Message content</description>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField> 