force-app/main/Messaging/objects/Message__c/fields/IsRead__c.field-meta.xml
<CustomField>
    <fullName>IsRead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the message has been read</description>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField> 