force-app/main/Messaging/objects/Message__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who received the message</description>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ReceivedMessages</relationshipName>
    <type>Lookup</type>
</CustomField> 