force-app/main/Messaging/objects/Message__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who sent the message</description>
    <label>Sender</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SentMessages</relationshipName>
    <type>Lookup</type>
</CustomField> 