force-app/main/Messaging/objects/Message__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>When the message was sent</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 